# src/routes/auth.routes.ts
@@ -8,6 +8,7 @@ const router = Router();
 // --- Rotas Públicas de Fluxo Padrão ---
 router.post("/register", AuthController.register);
 router.post("/login", AuthController.login);
+router.post("/refresh", AuthController.refresh);
 router.post(
   "/logout",
   authMiddleware,
